fix fadout flicker

--- a/styles/global.css
+++ b/styles/global.css
@@ -95,6 +95,7 @@ footer .center {
 }
 
 #hover-tooltip.vanish {
+    opacity: 0;
     animation: fade-out-opacity .8s;
 }
 
